home/namespaced/drone/web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: drone
        image: docker.io/drone/drone:2.15
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: drone-data
      - name: secrets
        image: docker.io/drone/kubernetes-secrets:latest
        ports:
        - containerPort: 3000
      serviceAccountName: drone
      volumes:
      - name: drone-data
        persistentVolumeClaim:
          claimName: drone-data
