home/namespaced/drone/web/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
  - name: secrets
    port: 3000
    protocol: TCP
