home/namespaced/drone/web/virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: drone
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 91279420-9a62-4119-a0c9-b8a0ef00a087.cfargotunnel.com
spec:
  gateways:
  - istio-gateways/mtaylor-io
  hosts:
  - drone.mtaylor.io
  http:
  - name: drone-routes
    route:
    - destination:
        host: web.drone.svc.cluster.local
        port:
          number: 80
